# Rapid-ADCS

./: .gitignore  README.md  README.txt
Homemade Magnetorquer Drawings/: Magnetorquer Assem1 - Mount 1.SLDDRW  Magnetorquer Base - Ferritic Core.SLDDRW
MCU Feature Testing/: FeatureChecklist.txt  README.txt
MCU Feature Testing/MCU_Feature_Test/: MCU_Feature_Test.atsln
Magnetorquer/: DRIVER.SchDoc  MAGNETOMETER.Harness  MAGNETOMETER.SchDoc  Magnetorquer.PrjPcb  TOP.SchDoc
Motor_Test/arduinoCode/DAQ_test/: CMakeLists.txt  DAQ_test.cpp  DAQ_test.ino  DAQ_test.old.cpp  GenericFifo.hpp  characterization_test.cpp  main.cpp  test.cpp  test_configs.cpp  test_configs.hpp  util.cpp  util.hpp
Motor_Test/arduinoCode/DAQ_test/tools/: configure_builds.sh  run_test.sh
Optimal Control/: casadi_optim.ipynb  spacecraft_model_acados.ipynb  spacecraft_model_rockit.ipynb
Simulink/OrientationModeling/: Controller.slx  DCMotorModel.slx  DCMotorModelSimple.slx  DCMotorTorqueModel.slx  GravityModel.slx  InertiaTensorCoordSysCalculator.slx  Magnetorquer.slx  Magnetorquers.slx  MotorSim.slx  OrbitSimExport.slxc  Orientation.slx  OrientationAnimationModel.slx  OrientationAnimationModel.slx.autosave  OrientationAnimationModel.slxc  OrientationTestAnimation.slx  OrientationTestAnimation.slx.autosave  OrientationTestAnimation.slx.original  OrientationTestSim.asv  OrientationTestSim.m  OrientationTestSimData.mat  README.txt  SatVR.bak  SatVR.x3d  Satellite.wrl  TensorTransformation.m  orbitalDescriptorsTest.asv  quat2rotmat.m  quaternionTest.m  quatmult.m
(+767 files in other folders)
